--- a/_posts/2012-01-15-faq.md
+++ b/_posts/2012-01-15-faq.md
@@ -157,6 +157,6 @@ permalink: /overview/faq.html
 
 Special thanks to Dustin Oprea ([@DustinOprea][dustin_oprea_twitter]) for kickstarting this FAQ.
 
-[issue_236]: https://github.com/bitly/nsq/pull/236
+[issue_236]: https://github.com/nsqio/nsq/pull/236
 [spec_names]: {{ site.baseurl }}/clients/tcp_protocol_spec.html#notes
 [dustin_oprea_twitter]: https://twitter.com/DustinOprea
