--- a/_posts/2014-01-01-patterns.md
+++ b/_posts/2014-01-01-patterns.md
@@ -199,6 +199,6 @@ new set of `nsqlookupd`.
 [client_libs]: {{ site.baseurl }}/clients/client_libraries.html
 [design_doc]: {{ site.baseurl }}/overview/design.html
 [golang_slides]: https://speakerdeck.com/snakes/nsq-nyc-golang-meetup
-[pynsq]: https://github.com/bitly/pynsq
-[nsq_to_file]: https://github.com/bitly/nsq/blob/master/apps/nsq_to_file/nsq_to_file.go
+[pynsq]: https://github.com/nsqio/pynsq
+[nsq_to_file]: https://github.com/nsqio/nsq/blob/master/apps/nsq_to_file/nsq_to_file.go
 [dist_link]: https://twitter.com/b6n/status/276909760010387456
