--- a/_posts/2012-10-01-nsqadmin.md
+++ b/_posts/2012-10-01-nsqadmin.md
@@ -1,4 +1,4 @@
---- 
+---
 title: nsqadmin
 layout: post
 category: components
@@ -8,7 +8,9 @@ permalink: /components/nsqadmin.html
 `nsqadmin` is a Web UI to view aggregated cluster stats in realtime and perform various
 administrative tasks.
 
-<img src="{{ site.baseurl }}/static/img/nsqadmin_screenshot.png" >
+<center>
+<img src="{{ site.baseurl }}/static/img/nsqadmin_screenshot.png" width="800"/>
+</center>
 
 ### Command Line Options
 
@@ -65,30 +67,28 @@ by setting `--notification-http-endpoint` to `http://addr.of.nsqd/put?topic=admi
 
 The following metrics are exposed through `nsqadmin` on Topic, Channel and Client Connections.
 
-**Message Queues:**
+#### Message Queues:
 
-* **Depth:** Current sum of messages in memory + on disk (i.e. the "backlog" of messages pending delivery).
-* **In-Flight:** Current count of messages delivered but not yet finished (`FIN`), requeued (`REQ`) or timed out.
-* **Deferred:** Current count of messages that were requeued and explicitly deferred which are not yet available for delivery.
+* `Depth`: Current sum of messages in memory + on disk (i.e. the "backlog" of messages pending delivery).
+* `In-Flight`: Current count of messages delivered but not yet finished (`FIN`), requeued (`REQ`) or timed out.
+* `Deferred`: Current count of messages that were requeued and explicitly deferred which are not yet available for delivery.
 
-**Statistics:**
+#### Statistics:
 
-* **Requeued:** Total times a message has been added back to the queue due to time outs or explicit requeues.
-* **Timed Out:** Total times a message has been requeued after not receiving a response from the client before the configured timeout.
-* **Messages:** Total count of new messages recieved since node startup.
-* **Rate:** The per-second rate of new messages over the previous two statsd intervals (available only when graphite integration is enabled).
-* **Connections:** Current number of connected clients.
+* `Requeued`: Total times a message has been added back to the queue due to time outs or explicit requeues.
+* `Timed Out`: Total times a message has been requeued after not receiving a response from the client before the configured timeout.
+* `Messages`: Total count of new messages recieved since node startup.
+* `Rate`: The per-second rate of new messages over the previous two statsd intervals (available only when graphite integration is enabled).
+* `Connections`: Current number of connected clients.
 
-**Client Connections:**
+#### Client Connections:
 
-* **Client Host:** Client ID (hostname) and on-hover the connection remote-address.
-* **Protocol:** NSQ protocol version and client user-agent.
-* **Attributes:** TLS and AUTH connection state.
-* **NSQd Host:** Address of the nsqd node this client is connected to.
-* **In-flight:** Current count of messages awaiting response that have been delivered to this client.
-* **Ready Count:** Max number of messages that can be in-flight on this connection. This is controlled by a client's `max_in_flight` setting.
-* **Finished:** Total count of messages that this client has finished (`FIN`).
-* **Requeued:** Total count of messages that this client has requeued (`REQ`).
-* **Messages:** Total count of messages delivered to this client.
-
-
+* `Client Host`: Client ID (hostname) and on-hover the connection remote-address.
+* `Protocol`: NSQ protocol version and client user-agent.
+* `Attributes`: TLS and AUTH connection state.
+* `NSQd Host`: Address of the nsqd node this client is connected to.
+* `In-flight`: Current count of messages awaiting response that have been delivered to this client.
+* `Ready Count`: Max number of messages that can be in-flight on this connection. This is controlled by a client's `max_in_flight` setting.
+* `Finished`: Total count of messages that this client has finished (`FIN`).
+* `Requeued`: Total count of messages that this client has requeued (`REQ`).
+* `Messages`: Total count of messages delivered to this client.
