nsqd: update HTTP docs

--- a/_posts/2012-12-01-nsqd.md
+++ b/_posts/2012-12-01-nsqd.md
@@ -1,4 +1,4 @@
---- 
+---
 title: nsqd
 layout: post
 category: components
@@ -7,7 +7,7 @@ permalink: /components/nsqd.html
 
 `nsqd` is the daemon that receives, queues, and delivers messages to clients.
 
-It can be run standalone but is normally configured in a cluster with `nsqlookupd` 
+It can be run standalone but is normally configured in a cluster with `nsqlookupd`
 instance(s) (in which case it will announce topics and channels for discovery).
 
 It listens on two TCP ports, one for clients and another for the HTTP API.  It
@@ -57,43 +57,43 @@ can optionally listen on a third port for HTTPS.
 
 ### HTTP API
 
- * [`/ping`](#ping) - liveness
- * [`/info`](#info) - version
- * [`/stats`](#stats) - comprehensive runtime telemetry
- * [`/pub`](#pub) - publish a message to a topic
- * [`/mpub`](#mpub) - publish multiple messages to a topic
- * [`/debug/pprof`](#debugpprof) - pprof debugging portal
- * [`/debug/pprof/profile`](#debugpprofprofile) - generate pprof CPU profile
- * [`/debug/pprof/goroutine`](#debugpprofgoroutine) - generate pprof goroutine profile
- * [`/debug/pprof/heap`](#debugpprofheap) - generate pprof heap profile
- * [`/debug/pprof/block`](#debugpprofblock) - generate pprof blocking profile
- * [`/debug/pprof/threadcreate`](#debugpprofthreadcreate) - generate pprof OS thread profile
+ * [`/ping`](#get-ping) - liveness
+ * [`/info`](#get-info) - version
+ * [`/stats`](#get-stats) - comprehensive runtime telemetry
+ * [`/pub`](#post-pub) - publish a message to a topic
+ * [`/mpub`](#post-mpub) - publish multiple messages to a topic
+ * [`/debug/pprof`](#get-debugpprof) - pprof debugging portal
+ * [`/debug/pprof/profile`](#get-debugpprofprofile) - generate pprof CPU profile
+ * [`/debug/pprof/goroutine`](#get-debugpprofgoroutine) - generate pprof goroutine profile
+ * [`/debug/pprof/heap`](#get-debugpprofheap) - generate pprof heap profile
+ * [`/debug/pprof/block`](#get-debugpprofblock) - generate pprof blocking profile
+ * [`/debug/pprof/threadcreate`](#get-debugpprofthreadcreate) - generate pprof OS thread profile
 
 `v1` namespace (as of `nsqd` `v0.2.29+`):
 
- * [`/topic/create`](#topiccreate) - create a new topic
- * [`/topic/delete`](#topicdelete) - delete a topic
- * [`/topic/empty`](#topicempty) - empty a topic
- * [`/topic/pause`](#topicpause) - pause message flow for a topic
- * [`/topic/unpause`](#topicunpause) - unpause message flow for a topic
- * [`/channel/create`](#channelcreate) - create a new channel
- * [`/channel/delete`](#channeldelete) - delete a channel
- * [`/channel/empty`](#channelempty) - empty a channel
- * [`/channel/pause`](#channelpause) - pause message flow for a channel
- * [`/channel/unpause`](#channelunpause) - unpause message flow for a channel
+ * [`/topic/create`](#post-topiccreate) - create a new topic
+ * [`/topic/delete`](#post-topicdelete) - delete a topic
+ * [`/topic/empty`](#post-topicempty) - empty a topic
+ * [`/topic/pause`](#post-topicpause) - pause message flow for a topic
+ * [`/topic/unpause`](#post-topicunpause) - unpause message flow for a topic
+ * [`/channel/create`](#post-channelcreate) - create a new channel
+ * [`/channel/delete`](#post-channeldelete) - delete a channel
+ * [`/channel/empty`](#post-channelempty) - empty a channel
+ * [`/channel/pause`](#post-channelpause) - pause message flow for a channel
+ * [`/channel/unpause`](#post-channelunpause) - unpause message flow for a channel
 
 **Deprecated**:
 
- * [`/create_topic`](#topiccreate) - create a new topic
- * [`/delete_topic`](#topicdelete) - delete a topic
- * [`/empty_topic`](#topicempty) - empty a topic
- * [`/pause_topic`](#topicpause) - pause message flow for a topic
- * [`/unpause_topic`](#topicunpause) - unpause message flow for a topic
- * [`/create_channel`](#channelcreate) - create a new channel
- * [`/delete_channel`](#channeldelete) - delete a channel
- * [`/empty_channel`](#channelempty) - empty a channel
- * [`/pause_channel`](#channelpause) - pause message flow for a channel
- * [`/unpause_channel`](#channelunpause) - unpause message flow for a channel
+ * [`/create_topic`](#post-topiccreate) - create a new topic
+ * [`/delete_topic`](#post-topicdelete) - delete a topic
+ * [`/empty_topic`](#post-topicempty) - empty a topic
+ * [`/pause_topic`](#post-topicpause) - pause message flow for a topic
+ * [`/unpause_topic`](#post-topicunpause) - unpause message flow for a topic
+ * [`/create_channel`](#post-channelcreate) - create a new channel
+ * [`/delete_channel`](#post-channeldelete) - delete a channel
+ * [`/empty_channel`](#post-channelempty) - empty a channel
+ * [`/pause_channel`](#post-channelpause) - pause message flow for a channel
+ * [`/unpause_channel`](#post-channelunpause) - unpause message flow for a channel
 
 **NOTE**: these deprecated endpoints return "wrapped" JSON:
 
@@ -102,273 +102,243 @@ can optionally listen on a third port for HTTPS.
 Sending an `Accept: application/vnd.nsq; version=1.0` header will negotiate the use of the
 *unwrapped* JSON response format (as of `nsqd` `v0.2.29+`).
 
-#### /pub
+* #### `POST` `/pub`
 
-Publish a message
+  Publish a message
 
-Method: **POST**
+  Query Params:
 
-Query Params:
+      topic - the topic to publish to
 
-    topic - the topic to publish to
+  Body:
 
-Body:
+      raw message bytes
 
-    raw message bytes
+  Example:
 
-{% highlight bash %}
-$ curl -d "<message>" http://127.0.0.1:4151/pub?topic=test
-{% endhighlight %}
+      $ curl -d "<message>" http://127.0.0.1:4151/pub?topic=name
 
-#### /mpub
+* #### `POST` `/mpub`
 
-Publish multiple messages in one roundtrip
+  Publish multiple messages in one roundtrip
 
-Method: **POST**
+  Query Params:
 
-Query Params:
+      topic - the topic to publish to
+      binary - bool ('true' or 'false') to enable binary mode
 
-    topic - the topic to publish to
-    binary - bool ('true' or 'false') to enable binary mode
+  Body
 
-Body:
+      \n separated raw message bytes
 
-    \n separated raw message bytes
+  **NOTE**: by default `/mpub` expects messages to be delimited by `\n`, use the `?binary=true` query
+  parameter to enable binary mode where the POST body is expected to be in the following format (the
+  HTTP `Content-Length` header should be sent as the total size of the `POST` body):
 
-**NOTE**: by default `/mpub` expects messages to be delimited by `\n`, use the `?binary=true` query
-parameter to enable binary mode where the POST body is expected to be in the following format (the
-HTTP `Content-Length` header should be sent as the total size of the POST body):
+      [ 4-byte num messages ]
+      [ 4-byte message #1 size ][ N-byte binary data ]
+            ... (repeated <num_messages> times)
 
-    [ 4-byte num messages ]
-    [ 4-byte message #1 size ][ N-byte binary data ]
-          ... (repeated <num_messages> times)
+  Example:
 
-{% highlight bash %}
-$ curl -d "<message>\n<message>\n<message>" http://127.0.0.1:4151/mpub?topic=test
-{% endhighlight %}
+      $ curl -d "<message>\n<message>\n<message>" http://127.0.0.1:4151/mpub?topic=name
 
-#### /topic/create
+* #### `POST` `/topic/create`
 
-**Deprecated alias:** `/create_topic`
+  _Deprecated alias: `/create_topic`_
 
-Create a topic
+  Create a topic
 
-Method: **POST**
+  Query Params:
 
-Query Params:
+      topic - the topic to create
 
-    topic - the topic to create
+  Example:
 
-{% highlight bash %}
-$ curl -X POST http://127.0.0.1:4151/topic/create?topic=test
-{% endhighlight %}
+      $ curl -X POST http://127.0.0.1:4151/topic/create?topic=name
 
-#### /topic/delete
+* #### `POST` `/topic/delete`
 
-**Deprecated alias:** `/delete_topic`
+  _Deprecated alias: `/delete_topic`_
 
-Delete an existing topic (and all channels)
+  Delete an existing topic (and all channels)
 
-Method: **POST**
+  Query Params:
 
-Query Params:
+      topic - the existing topic to delete
 
-    topic - the existing topic to delete
+  Example:
 
-{% highlight bash %}
-$ curl -X POST http://127.0.0.1:4151/topic/delete?topic=test
-{% endhighlight %}
+      $ curl -X POST http://127.0.0.1:4151/topic/delete?topic=name
 
-#### /channel/create
+* #### `POST` `/channel/create`
 
-**Deprecated alias:** `/create_channel`
+  _Deprecated alias: `/create_channel`_
 
-Create a channel for an existing topic
+  Create a channel for an existing topic
 
-Method: **POST**
+  Query Params:
 
-Query Params:
+      topic - the existing topic
+      channel - the channel to create
 
-    topic - the existing topic
-    channel - the channel to create
+  Example:
 
-{% highlight bash %}
-$ curl -X POST http://127.0.0.1:4151/channel/create?topic=test&channel=ch
-{% endhighlight %}
+      $ curl -X POST http://127.0.0.1:4151/channel/create?topic=name&channel=name
 
-#### /channel/delete
+* #### `POST` `/channel/delete`
 
-**Deprecated alias:** `/delete_channel`
+  _Deprecated alias: `/delete_channel`_
 
-Delete an existing channel for an existing topic
+  Delete an existing channel on an existing topic
 
-Method: **POST**
+  Query Params:
 
-Query Params:
+      topic - the existing topic
+      channel - the existing channel to delete
 
-    topic - the existing topic
-    channel - the existing channel to delete
+  Example:
 
-{% highlight bash %}
-$ curl -X POST http://127.0.0.1:4151/channel/delete?topic=test&channel=ch
-{% endhighlight %}
+      $ curl -X POST http://127.0.0.1:4151/channel/delete?topic=name&channel=name
 
-#### /topic/empty
+* #### `POST` `/topic/empty`
 
-**Deprecated alias:** `/empty_topic`
+  _Deprecated alias: `/empty_topic`_
 
-Empty all the queued messages (in-memory and disk) for an existing topic
+  Empty all the queued messages (in-memory and disk) for an existing topic
 
-Method: **POST**
+  Query Params:
 
-Query Params:
+      topic - the existing topic to empty
 
-    topic - the existing topic to empty
+  Example:
 
-{% highlight bash %}
-$ curl -X POST http://127.0.0.1:4151/topic/empty?topic=test
-{% endhighlight %}
+      $ curl -X POST http://127.0.0.1:4151/topic/empty?topic=name
 
-#### /channel/empty
+* #### `POST` `/channel/empty`
 
-**Deprecated alias:** `/empty_channel`
+  _Deprecated alias: `/empty_channel`_
 
-Empty all the queued messages (in-memory and disk) for an existing channel
+  Empty all the queued messages (in-memory and disk) for an existing channel
 
-Method: **POST**
+  Query Params:
 
-Query Params:
+      topic - the existing topic
+      channel - the existing channel to empty
 
-    topic - the existing topic
-    channel - the existing channel to empty
+  Example:
 
-{% highlight bash %}
-$ curl -X POST http://127.0.0.1:4151/channel/empty?topic=test&channel=ch
-{% endhighlight %}
+      $ curl -X POST http://127.0.0.1:4151/channel/empty?topic=name&channel=name
 
-#### /topic/pause
+* #### `POST` `/topic/pause`
 
-**Deprecated alias:** `/pause_topic`
+  _Deprecated alias: `/pause_topic`_
 
-Pause message flow to all channels on an existing topic (messages will queue at *topic*)
+  Pause message flow to all channels on an existing topic (messages will queue at *topic*)
 
-Method: **POST**
+  Query Params:
 
-Query Params:
+      topic - the existing topic
 
-    topic - the existing topic
+  Example:
 
-{% highlight bash %}
-$ curl -X POST http://127.0.0.1:4151/topic/pause?topic=test
-{% endhighlight %}
+      $ curl -X POST http://127.0.0.1:4151/topic/pause?topic=name
 
-#### /topic/unpause
+* #### `POST` `/topic/unpause`
 
-**Deprecated alias:** `/unpause_topic`
+  _Deprecated alias: `/unpause_topic`_
 
-Resume message flow to channels of an existing, paused, topic
+  Resume message flow to channels of an existing, paused, topic
 
-Method: **POST**
+  Query Params:
 
-Query Params:
+      topic - the existing topic
 
-    topic - the existing topic
+  Example:
 
-{% highlight bash %}
-$ curl -X POST http://127.0.0.1:4151/topic/unpause?topic=test
-{% endhighlight %}
+      $ curl -X POST http://127.0.0.1:4151/topic/unpause?topic=name
 
-#### /channel/pause
+* #### `POST` `/channel/pause`
 
-**Deprecated alias:** `/channel_pause`
+  _Deprecated alias: `/channel_pause`_
 
-Pause message flow to consumers of an existing channel (messages will queue)
+  Pause message flow to consumers of an existing channel (messages will queue at *channel*)
 
-Method: **POST**
+  Query Params:
 
-Query Params:
+      topic - the existing topic
+      channel - the existing channel to pause
 
-    topic - the existing topic
-    channel - the existing channel to pause
+  Example:
 
-{% highlight bash %}
-$ curl -X POST http://127.0.0.1:4151/channel/pause?topic=test&channel=ch
-{% endhighlight %}
+      $ curl -X POST http://127.0.0.1:4151/channel/pause?topic=name&channel=name
 
-#### /channel/unpause
+* #### `POST` `/channel/unpause`
 
-**Deprecated alias:** `/unpause_channel`
+  _Deprecated alias: `/unpause_channel`_
 
-Resume message flow to consumers of an existing, paused, channel
+  Resume message flow to consumers of an existing, paused, channel
 
-Method: **POST**
+  Query Params:
 
-Query Params:
+      topic - the existing topic
+      channel - the existing channel to pause
 
-    topic - the existing topic
-    channel - the existing channel to pause
+  Example:
 
-{% highlight bash %}
-$ curl -X POST http://127.0.0.1:4151/channel/unpause?topic=test&channel=ch
-{% endhighlight %}
+      $ curl -X POST http://127.0.0.1:4151/channel/unpause?topic=name&channel=name
 
-#### /stats
+* #### `GET` `/stats`
 
-Return internal instrumented statistics
+  Return internal statistics
 
-Method: **POST**
+  Query Params
 
-Query Params
+      format - (optional) `text` or `json` (default = `text`)
+      topic - (optional) filter to topic
+      channel - (optional) filter to channel
 
-    format - (optional) `text` or `json` (default = `text`)
-    topic - (optional) filter to topic
-    channel - (optional) filter to channel
+  Example:
 
-{% highlight bash %}
-$ curl http://127.0.0.1:4151/stats?format=json
-{% endhighlight %}
+      $ curl http://127.0.0.1:4151/stats
 
-#### /ping
+* #### `GET` `/ping`
 
-Monitoring endpoint, should return `OK`. It returns an HTTP `500` if it is not healthy.
+  Monitoring endpoint, should return `200` `OK`. It returns an HTTP `500` if it is not healthy.
 
-Method: **GET**
+  **NOTE**: The only "unhealthy" state is if `nsqd` failed to write messages to disk when
+  overflow occurred.
 
-**NOTE**: The only "unhealthy" state would be if `nsqd` failed to write messages to disk when
-overflow occurred.
+* #### `GET` `/info`
 
-#### /info
+  Version information
 
-Version information
+* #### `GET` `/debug/pprof`
 
-Method: **GET**
+  An index page of available debugging endpoints
 
-#### /debug/pprof
+* #### `GET` `/debug/pprof/profile`
 
-An index page of available debugging endpoints
+  Starts a `pprof` CPU profile for 30s and returns the output via the request
 
-#### /debug/pprof/profile
+  **NOTE**: this endpoint is *not* listed in the `/debug/pprof` index page because of its effect
+  on runtime performance.
 
-Starts a `pprof` CPU profile for 30s and returns the output via the request
+* #### `GET` `/debug/pprof/goroutine`
 
-**NOTE: this endpoint is *not* listed in the `/debug/pprof` index page because of its effect
-on runtime performance and duration**
+  Returns a stack trace for all running goroutines
 
-#### /debug/pprof/goroutine
+* #### `GET` `/debug/pprof/heap`
 
-Returns a stack trace for all running goroutines
+  Returns a heap and memstats profile (top portion can be used as a `pprof` memory profile)
 
-#### /debug/pprof/heap
+* #### `GET` `/debug/pprof/block`
 
-Returns a heap and memstats profile (top portion can be used as a `pprof` memory profile)
+  Returns a goroutine blocking profile
 
-#### /debug/pprof/block
+* #### `GET` `/debug/pprof/threadcreate`
 
-Returns a goroutine blocking profile
-
-#### /debug/pprof/threadcreate
-
-Returns goroutine stack traces that led to the creation of an OS thread
+  Returns goroutine stack traces that led to the creation of an OS thread
 
 ### <a name="pprof">Debugging and Profiling</a>
 
@@ -420,7 +390,7 @@ clients with auth.
 The Auth Server must accept an HTTP request on:
 
     /auth?remote_ip=...&tls=...&auth_secret=...
-    
+
 And return a response in the following format:
 
     {
@@ -512,7 +482,7 @@ retentions = 1m:1d,5m:30d,15m:1y
 # storage-aggregation.conf
 [default_nsq]
 pattern = ^nsq\..*
-xFilesFactor = 0.2 
+xFilesFactor = 0.2
 aggregationMethod = average
 {% endhighlight %}
 
@@ -529,7 +499,7 @@ The `nsqd` instance will push to the following `statsd` paths:
     nsq.<nsqd_host>_<nsqd_port>.topic.<topic_name>.channel.<channel_name>.message_count
     nsq.<nsqd_host>_<nsqd_port>.topic.<topic_name>.channel.<channel_name>.requeue_count
     nsq.<nsqd_host>_<nsqd_port>.topic.<topic_name>.channel.<channel_name>.timeout_count
-    
+
     # if --statsd-mem-stats is enabled
     nsq.<nsqd_host>_<nsqd_port>.mem.heap_objects [gauge]
     nsq.<nsqd_host>_<nsqd_port>.mem.heap_idle_bytes [gauge]
