HTTP doc updates

--- a/_posts/2012-12-01-nsqd.md
+++ b/_posts/2012-12-01-nsqd.md
@@ -82,7 +82,7 @@ can optionally listen on a third port for HTTPS.
  * [`/channel/pause`](#channelpause) - pause message flow for a channel
  * [`/channel/unpause`](#channelunpause) - unpause message flow for a channel
 
-Deprecated namespace:
+**Deprecated**:
 
  * [`/create_topic`](#topiccreate) - create a new topic
  * [`/delete_topic`](#topicdelete) - delete a topic
@@ -95,7 +95,7 @@ Deprecated namespace:
  * [`/pause_channel`](#channelpause) - pause message flow for a channel
  * [`/unpause_channel`](#channelunpause) - unpause message flow for a channel
 
-**NOTE**: these endpoints return "wrapped" JSON:
+**NOTE**: these deprecated endpoints return "wrapped" JSON:
 
     {"status_code":200, "status_text":"OK", "data":{...}}
 
@@ -106,26 +106,34 @@ Sending an `Accept: application/vnd.nsq; version=1.0` header will negotiate the 
 
 Publish a message
 
-Params:
+Method: **POST**
+
+Query Params:
 
     topic - the topic to publish to
-    
-    POST body - the raw message bytes
+
+Body:
+
+    raw message bytes
 
 {% highlight bash %}
-$ curl -d "<message>" http://127.0.0.1:4151/pub?topic=message_topic`
+$ curl -d "<message>" http://127.0.0.1:4151/pub?topic=test
 {% endhighlight %}
 
 #### /mpub
 
 Publish multiple messages in one roundtrip
 
-Params:
+Method: **POST**
+
+Query Params:
 
     topic - the topic to publish to
     binary - bool ('true' or 'false') to enable binary mode
-    
-    POST body - `\n` separated raw message bytes
+
+Body:
+
+    \n separated raw message bytes
 
 **NOTE**: by default `/mpub` expects messages to be delimited by `\n`, use the `?binary=true` query
 parameter to enable binary mode where the POST body is expected to be in the following format (the
@@ -136,7 +144,7 @@ HTTP `Content-Length` header should be sent as the total size of the POST body):
           ... (repeated <num_messages> times)
 
 {% highlight bash %}
-$ curl -d "<message>\n<message>\n<message>" http://127.0.0.1:4151/mpub?topic=message_topic`
+$ curl -d "<message>\n<message>\n<message>" http://127.0.0.1:4151/mpub?topic=test
 {% endhighlight %}
 
 #### /topic/create
@@ -145,9 +153,15 @@ $ curl -d "<message>\n<message>\n<message>" http://127.0.0.1:4151/mpub?topic=mes
 
 Create a topic
 
-Params:
+Method: **POST**
+
+Query Params:
 
     topic - the topic to create
+
+{% highlight bash %}
+$ curl -X POST http://127.0.0.1:4151/topic/create?topic=test
+{% endhighlight %}
 
 #### /topic/delete
 
@@ -155,9 +169,15 @@ Params:
 
 Delete an existing topic (and all channels)
 
-Params:
+Method: **POST**
+
+Query Params:
 
     topic - the existing topic to delete
+
+{% highlight bash %}
+$ curl -X POST http://127.0.0.1:4151/topic/delete?topic=test
+{% endhighlight %}
 
 #### /channel/create
 
@@ -165,10 +185,16 @@ Params:
 
 Create a channel for an existing topic
 
-Params:
+Method: **POST**
+
+Query Params:
 
     topic - the existing topic
     channel - the channel to create
+
+{% highlight bash %}
+$ curl -X POST http://127.0.0.1:4151/channel/create?topic=test&channel=ch
+{% endhighlight %}
 
 #### /channel/delete
 
@@ -176,10 +202,16 @@ Params:
 
 Delete an existing channel for an existing topic
 
-Params:
+Method: **POST**
+
+Query Params:
 
     topic - the existing topic
     channel - the existing channel to delete
+
+{% highlight bash %}
+$ curl -X POST http://127.0.0.1:4151/channel/delete?topic=test&channel=ch
+{% endhighlight %}
 
 #### /topic/empty
 
@@ -187,9 +219,15 @@ Params:
 
 Empty all the queued messages (in-memory and disk) for an existing topic
 
-Params:
+Method: **POST**
+
+Query Params:
 
     topic - the existing topic to empty
+
+{% highlight bash %}
+$ curl -X POST http://127.0.0.1:4151/topic/empty?topic=test
+{% endhighlight %}
 
 #### /channel/empty
 
@@ -197,10 +235,16 @@ Params:
 
 Empty all the queued messages (in-memory and disk) for an existing channel
 
-Params:
+Method: **POST**
+
+Query Params:
 
     topic - the existing topic
     channel - the existing channel to empty
+
+{% highlight bash %}
+$ curl -X POST http://127.0.0.1:4151/channel/empty?topic=test&channel=ch
+{% endhighlight %}
 
 #### /topic/pause
 
@@ -208,9 +252,15 @@ Params:
 
 Pause message flow to all channels on an existing topic (messages will queue at *topic*)
 
-Params:
+Method: **POST**
+
+Query Params:
 
     topic - the existing topic
+
+{% highlight bash %}
+$ curl -X POST http://127.0.0.1:4151/topic/pause?topic=test
+{% endhighlight %}
 
 #### /topic/unpause
 
@@ -218,9 +268,15 @@ Params:
 
 Resume message flow to channels of an existing, paused, topic
 
-Params:
+Method: **POST**
+
+Query Params:
 
     topic - the existing topic
+
+{% highlight bash %}
+$ curl -X POST http://127.0.0.1:4151/topic/unpause?topic=test
+{% endhighlight %}
 
 #### /channel/pause
 
@@ -228,10 +284,16 @@ Params:
 
 Pause message flow to consumers of an existing channel (messages will queue)
 
-Params:
+Method: **POST**
+
+Query Params:
 
     topic - the existing topic
     channel - the existing channel to pause
+
+{% highlight bash %}
+$ curl -X POST http://127.0.0.1:4151/channel/pause?topic=test&channel=ch
+{% endhighlight %}
 
 #### /channel/unpause
 
@@ -239,26 +301,47 @@ Params:
 
 Resume message flow to consumers of an existing, paused, channel
 
-Params:
+Method: **POST**
+
+Query Params:
 
     topic - the existing topic
     channel - the existing channel to pause
+
+{% highlight bash %}
+$ curl -X POST http://127.0.0.1:4151/channel/unpause?topic=test&channel=ch
+{% endhighlight %}
 
 #### /stats
 
 Return internal instrumented statistics
 
-Params
+Method: **POST**
+
+Query Params
 
     format - (optional) `text` or `json` (default = `text`)
+    topic - (optional) filter to topic
+    channel - (optional) filter to channel
+
+{% highlight bash %}
+$ curl http://127.0.0.1:4151/stats?format=json
+{% endhighlight %}
 
 #### /ping
 
-Monitoring endpoint, should return `OK`. It returns a 500 if it is not healthy.  At the moment, the only "unhealthy" state would be if it failed to write messages to disk when overflow occurred.
+Monitoring endpoint, should return `OK`. It returns an HTTP `500` if it is not healthy.
+
+Method: **GET**
+
+**NOTE**: The only "unhealthy" state would be if `nsqd` failed to write messages to disk when
+overflow occurred.
 
 #### /info
 
-Returns version information
+Version information
+
+Method: **GET**
 
 #### /debug/pprof
 
