nsqadmin: document metrics and show a screenshot

--- a/_posts/2012-10-01-nsqadmin.md
+++ b/_posts/2012-10-01-nsqadmin.md
@@ -8,6 +8,8 @@ permalink: /components/nsqadmin.html
 `nsqadmin` is a Web UI to view aggregated cluster stats in realtime and perform various
 administrative tasks.
 
+<img src="{{ site.baseurl }}/static/img/nsqadmin_screenshot.png" >
+
 ### Command Line Options
 
     -graphite-url="": URL to graphite HTTP address
@@ -56,3 +58,35 @@ by setting `--notification-http-endpoint` to `http://addr.of.nsqd/put?topic=admi
 
 [gaproxy]: https://github.com/bitly/google_auth_proxy
 [statsdaemon]: https://github.com/bitly/statsdaemon
+
+### Metrics
+
+The following metrics are exposed through `nsqadmin` on Topic, Channel and Client Connections.
+
+**Message Queues:**
+
+* **Depth:** Current sum of messages in memory + on disk (i.e. the "backlog" of messages pending delivery).
+* **In-Flight:** Current count of messages delivered but not yet finished (`FIN`), requeued (`REQ`) or timed out.
+* **Deferred:** Current count of messages that were requeued and explicitly deferred which are not yet available for delivery.
+
+**Statistics:**
+
+* **Requeued:** Total count of messages that have been added back to the queue due to time outs or explicit requeues.
+* **Timed Out:** Total count of messages that were requeued after not receiving a response from the client before the configured timeout.
+* **Messages:** Total count of new messages recieved since node startup.
+* **Rate:** The per-second rate of new messages (available when graphite integration is enabled).
+* **Connections:** Current number of connected clients.
+
+**Client Connections:**
+
+* **Client Host:** Client ID (hostname) and on-hover the connection remote-address.
+* **Protocol:** NSQ protocol version and client user-agent.
+* **Attributes:** TLS and AUTH connection state.
+* **NSQd Host:** Address of the nsqd node connected to.
+* **In-flight:** Number of messages sent on a connection which are not yet Finished or Requeued.
+* **Ready Count:** Max number of messages that can be in-flight on this connection. This is controlled by a client's `max_in_flight` setting.
+* **Finished:** Sum of Finish (`FIN`) responses.
+* **Requeued:** Sum of Requeue (`REQ`) responses.
+* **Messages:** Count of messages sent to this connection.
+
+
