more nsqadmin stats clarity

--- a/_posts/2012-10-01-nsqadmin.md
+++ b/_posts/2012-10-01-nsqadmin.md
@@ -18,6 +18,8 @@ administrative tasks.
     -notification-http-endpoint="": HTTP endpoint (fully qualified) to which POST notifications of admin actions will be sent
     -nsqd-http-address=[]: nsqd HTTP address (may be given multiple times)
     -proxy-graphite=false: Proxy HTTP requests to graphite
+    -statsd-interval=1m0s: time interval nsqd is configured to push to statsd (must match nsqd)
+    -statsd-prefix="nsq.%s": prefix used for keys sent to statsd (%s for host replacement, must
     -template-dir="": path to templates directory
     -use-statsd-prefixes=true: expect statsd prefixed keys in graphite (ie: 'stats_counts.')
     -version=false: print version string
@@ -71,10 +73,10 @@ The following metrics are exposed through `nsqadmin` on Topic, Channel and Clien
 
 **Statistics:**
 
-* **Requeued:** Total count of messages that have been added back to the queue due to time outs or explicit requeues.
-* **Timed Out:** Total count of messages that were requeued after not receiving a response from the client before the configured timeout.
+* **Requeued:** Total times a message has been added back to the queue due to time outs or explicit requeues.
+* **Timed Out:** Total times a message has been requeued after not receiving a response from the client before the configured timeout.
 * **Messages:** Total count of new messages recieved since node startup.
-* **Rate:** The per-second rate of new messages (available when graphite integration is enabled).
+* **Rate:** The per-second rate of new messages over the previous two statsd intervals (available only when graphite integration is enabled).
 * **Connections:** Current number of connected clients.
 
 **Client Connections:**
@@ -82,11 +84,11 @@ The following metrics are exposed through `nsqadmin` on Topic, Channel and Clien
 * **Client Host:** Client ID (hostname) and on-hover the connection remote-address.
 * **Protocol:** NSQ protocol version and client user-agent.
 * **Attributes:** TLS and AUTH connection state.
-* **NSQd Host:** Address of the nsqd node connected to.
-* **In-flight:** Number of messages sent on a connection which are not yet Finished or Requeued.
+* **NSQd Host:** Address of the nsqd node this client is connected to.
+* **In-flight:** Current count of messages awaiting response that have been delivered to this client.
 * **Ready Count:** Max number of messages that can be in-flight on this connection. This is controlled by a client's `max_in_flight` setting.
-* **Finished:** Sum of Finish (`FIN`) responses.
-* **Requeued:** Sum of Requeue (`REQ`) responses.
-* **Messages:** Count of messages sent to this connection.
+* **Finished:** Total count of messages that this client has finished (`FIN`).
+* **Requeued:** Total count of messages that this client has requeued (`REQ`).
+* **Messages:** Total count of messages delivered to this client.
 
 
