update nsqd flags for --e2e-processing-latency-percentile

--- a/_posts/2012-12-01-nsqd.md
+++ b/_posts/2012-12-01-nsqd.md
@@ -20,7 +20,7 @@ can optionally listen on a third port for HTTPS.
     -config="": path to config file
     -data-path="": path to store disk-backed messages
     -deflate=true: enable deflate feature negotiation (client compression)
-    -e2e-processing-latency-percentile=: message processing time percentiles to keep track of (can be specified multiple times or comma separated, default none)
+    -e2e-processing-latency-percentile=: message processing time percentiles (as float (0, 1.0]) to track (can be specified multiple times or comma separated '1.0,0.99,0.95', default none)
     -e2e-processing-latency-window-time=10m0s: calculate end to end latency quantiles for this duration of time (ie: 60s would only show quantile calculations from the past 60 seconds)
     -http-address="0.0.0.0:4151": <addr>:<port> to listen on for HTTP clients
     -https-address="": <addr>:<port> to listen on for HTTPS clients
