nsqadmin - update notification docs

--- a/_posts/2012-10-01-nsqadmin.md
+++ b/_posts/2012-10-01-nsqadmin.md
@@ -39,7 +39,7 @@ If the `--notification-http-endpoint` flag is set, `nsqadmin` will send a POST r
 specified (fully qualified) endpoint each time an admin action (such as pausing a channel) is
 performed.
 
-The body of the request contains information about the action, like so:
+The body of the request contains information about the action (some fields will be omitted when appropriate), like so:
 
 {% highlight json %}
 {
@@ -48,20 +48,40 @@ The body of the request contains information about the action, like so:
   "topic": "beer",
   "timestamp": 1357683731,
   "user": "df",
-  "user_agent": "Mozilla/5.0 (Macintosh; Iphone 8)"
-  "remote_ip": "1.2.3.4:5678"
+  "user_agent": "Mozilla/5.0 (Macintosh; Iphone 8)",
+  "remote_ip": "1.2.3.4:5678",
+  "url": "http://nsqadmin.local/api/topics/api_requests/nsq_to_file",
+  "via": "localhost"
 }
 {% endhighlight %}
 
-The `user` field will be filled if a username is present in the request made to `nsqadmin`, say if
-it were running with htpasswd authentication or behind [google-auth-proxy][gaproxy], otherwise it
-will be an empty string. The `channel` field will also be an empty string when not applicable.
+The `user` field will be filled if a HTTP Basic Authentication Username is present in the request made to `nsqadmin`,
+say if it were running with htpasswd authentication or behind [`oauth2_proxy`][oauth2_proxy].
 
 Hint: You can create an NSQ stream of admin action notifications with the topic name `admin_actions`
-by setting `--notification-http-endpoint` to `http://addr.of.nsqd/put?topic=admin_actions`
+by setting `--notification-http-endpoint` to point to the `nsqd` [HTTP Publish API]({{ site.baseurl }}/components/nsqd.html#post-pub). For example if running `nsqd` on the same node you could use `--notification-http-endpoint="http://127.0.0.1:4151/put?topic=admin_actions"`
 
-[gaproxy]: https://github.com/bitly/google_auth_proxy
+There are community contributed utilities [`nsqadmin2slack`][nsqadmin2slack] and [`nsqadmin2hipchat`][nsqadmin2hipchat] to relay messages to HipChat and Slack respectively.
+
+Actions that are captured are:
+
+ * `create_channel`
+ * `create_topic`
+ * `delete_channel`
+ * `delete_topic`
+ * `empty_channel`
+ * `empty_topic`
+ * `pause_channel`
+ * `pause_topic`
+ * `tombstone_topic_producer`
+ * `unpause_channel`
+ * `unpause_topic`
+
+
+[oauth2_proxy]: https://github.com/bitly/oauth2_proxy#oauth2_proxy
 [statsdaemon]: https://github.com/bitly/statsdaemon
+[nsqadmin2slack]: https://github.com/bensenberner/nsqadmin2slack
+[nsqadmin2hipchat]: https://github.com/danielhfrank/nsqadmin2hipchat
 
 ### Metrics
 
