Add link to video from MNUG 2017 talk

--- a/_posts/2015-01-01-links.md
+++ b/_posts/2015-01-01-links.md
@@ -23,3 +23,6 @@ permalink: /talks_and_slides.html
  * 2014-04-24 - **GopherCon 2014** [video](http://confreaks.com/videos/3429-gophercon2014-spray-some-nsq-on-it) [slides](https://speakerdeck.com/snakes/spray-some-nsq-on-it) ([@imsnakes](https://twitter.com/imsnakes) of Torando Labs)
 
  * 2015-06-02 - **Berlin Buzzwords 2015** [video](https://www.youtube.com/watch?v=OwD-W7uU2zU) [slides](http://georgi.io/scale-with-nsq) ([@GeorgiCodes](https://twitter.com/GeorgiCodes) of Bitly)
+
+ * 2015-07-30 - **Munich Node.js User Group** [video](https://www.youtube.com/watch?v=xhNapGc6SsU) ([@juliangruber] of NowSecure)
+ 
