Add nsqd config examples

--- a/_posts/2012-12-01-nsqd.md
+++ b/_posts/2012-12-01-nsqd.md
@@ -61,6 +61,8 @@ can optionally listen on a third port for HTTPS.
  * [`/stats`](#get-stats) - comprehensive runtime telemetry
  * [`/pub`](#post-pub) - publish a message to a topic
  * [`/mpub`](#post-mpub) - publish multiple messages to a topic
+ * [`/config/nsqlookupd_tcp_addresses`](#get-config) - returns array of nsqlookupd  addresses
+ * [`/config/nsqlookupd_tcp_addresses`](#put-config) - updates nsqlookupd TCP addresses
  * [`/debug/pprof`](#get-debugpprof) - pprof debugging portal
  * [`/debug/pprof/profile`](#get-debugpprofprofile) - generate pprof CPU profile
  * [`/debug/pprof/goroutine`](#get-debugpprofgoroutine) - generate pprof goroutine profile
@@ -318,6 +320,26 @@ can optionally listen on a third port for HTTPS.
 * #### `GET` `/debug/pprof/threadcreate`
 
   Returns goroutine stack traces that led to the creation of an OS thread
+
+* #### `GET` `/config/nsqlookupd_tcp_addresses`
+
+  List of nsqlookupd TCP addresses.
+
+  Example:
+
+      $ curl http://127.0.0.1:4151/config/nsqlookupd_tcp_addresses
+
+* #### `PUT` `/config/nsqlookupd_tcp_addresses`
+
+  Update the nsqlookupd TCP addresses.
+
+  Body:
+
+      JSON array of TCP addresses.
+
+  Example:
+
+      $ curl -X PUT -d '["127.0.0.1:4160", "127.0.0.2:4160"]' http://127.0.0.1:4151/config/nsqlookupd_tcp_addresses
 
 ### <a name="pprof">Debugging and Profiling</a>
 
