Run instructions with Gemfile

--- a/_posts/2012-12-01-nsqd.md
+++ b/_posts/2012-12-01-nsqd.md
@@ -61,7 +61,7 @@ can optionally listen on a third port for HTTPS.
  * [`/stats`](#get-stats) - comprehensive runtime telemetry
  * [`/pub`](#post-pub) - publish a message to a topic
  * [`/mpub`](#post-mpub) - publish multiple messages to a topic
- * [`/config`](#get-config) - configure nsqd
+ * [`/config`](#get-confignsqlookupd_tcp_addresses) - configure nsqd
  * [`/debug/pprof`](#get-debugpprof) - pprof debugging portal
  * [`/debug/pprof/profile`](#get-debugpprofprofile) - generate pprof CPU profile
  * [`/debug/pprof/goroutine`](#get-debugpprofgoroutine) - generate pprof goroutine profile
